--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,12 @@ pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
 pg_test = []
 
 [dependencies]
-arrow = {version = "52", default-features = false}
+arrow = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "ba8cb48", default-features = false}
+arrow-schema = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "ba8cb48", default-features = false}
 bytes = "1"
 futures = "0.3"
 object_store = {version = "0.10", default-features = false, features = ["aws"]}
-parquet = { version = "52", default-features = false, features = [
+parquet = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "ba8cb48", default-features = false, features = [
     "arrow",
     "snap",
     "brotli",
@@ -31,6 +32,8 @@ parquet = { version = "52", default-features = false, features = [
     "object_store",
 ]}
 pgrx = "=0.11.4"
+serde = {version = "1", default-features = false}
+serde_json = "1"
 tokio = {version = "1", default-features = false, features = ["rt", "time", "macros"]}
 
 [dev-dependencies]
