- adds ci action to lint and tests, - fixes lint warnings and enforce linting via vscode settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "rust-lang.rust-analyzer",
+    "rust-analyzer.check.command": "clippy",
     "rust-analyzer.checkOnSave": true
 }
