--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ pg_test = []
 [dependencies]
 arrow = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "adc57b1", default-features = false}
 arrow-schema = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "adc57b1", default-features = false}
-bytes = "1"
 futures = "0.3"
 object_store = {version = "0.10", default-features = false, features = ["aws"]}
 parquet = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "adc57b1", default-features = false, features = [
@@ -31,6 +30,7 @@ parquet = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "adc57b1
     "zstd",
     "object_store",
 ]}
+once_cell = "1"
 pgrx = "=0.11.4"
 serde = {version = "1", default-features = false}
 serde_json = "1"
