--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,20 +8,16 @@ crate-type = ["cdylib"]
 
 [features]
 default = ["pg16"]
-# pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
-# pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
-# pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
-# pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
-# pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
 pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
 pg_test = []
 
 [dependencies]
-arrow = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "adc57b1", default-features = false}
-arrow-schema = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "adc57b1", default-features = false}
+arrow = {version = "53", default-features = false}
+arrow-schema = {version = "53", default-features = false}
 futures = "0.3"
-object_store = {version = "0.10", default-features = false, features = ["aws"]}
-parquet = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "adc57b1", default-features = false, features = [
+object_store = {version = "0.11", default-features = false, features = ["aws"]}
+once_cell = "1"
+parquet = {version = "53", default-features = false, features = [
     "arrow",
     "snap",
     "brotli",
@@ -30,7 +26,6 @@ parquet = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "adc57b1
     "zstd",
     "object_store",
 ]}
-once_cell = "1"
 pgrx = "=0.11.4"
 serde = {version = "1", default-features = false}
 serde_json = "1"
