--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib","lib"]
+
+[[bin]]
+name = "pgrx_embed_pg_parquet"
+path = "./src/bin/pgrx_embed.rs"
 
 [features]
 default = ["pg16"]
@@ -26,13 +30,13 @@ parquet = {version = "53", default-features = false, features = [
     "zstd",
     "object_store",
 ]}
-pgrx = "=0.11.4"
+pgrx = "=0.12.3"
 serde = {version = "1", default-features = false}
 serde_json = "1"
 tokio = {version = "1", default-features = false, features = ["rt", "time", "macros"]}
 
 [dev-dependencies]
-pgrx-tests = "=0.11.4"
+pgrx-tests = "=0.12.3"
 
 [profile.dev]
 panic = "unwind"
