--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,13 @@ jobs:
           RUSTFLAGS: "-C instrument-coverage"
           CARGO_INCREMENTAL: 0
           RUST_TEST_THREADS: 1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_S3_TEST_BUCKET: ${{ secrets.AWS_S3_TEST_BUCKET }}
 
       - name: Generate coverage report
+        continue-on-error: true
         run: |
           llvm-profdata merge default_*.profraw \
             --output=pg_parquet.profdata
