--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,22 +22,10 @@ jobs:
           target: x86_64-unknown-linux-gnu
           components: rustfmt, clippy
 
-      - name: Extract rustc LLVM version
-        id: rustc-llvm-version
-        run: echo "version=$(rustc --version --verbose | grep 'LLVM version' | cut -d ' ' -f 3)" >> $GITHUB_OUTPUT
-      
-      # we need to install exactly the same version of LLVM and Clang as Rust uses for the coverage report
-      - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v2
-        with:
-          version: ${{ steps.rustc-llvm-version.outputs.version }}
+      - name: Install cargo-llvm-cov for coverage report
+        run: cargo install --locked cargo-llvm-cov@0.6.12
 
-      - name: Print LLVM and Clang versions
-        run: |
-          llvm-config --version
-          clang --version
-
-      - name: Install PostgreSQL dependencies
+      - name: Install PostgreSQL
         run: |
           sudo sh -c 'echo "deb https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
@@ -55,41 +43,28 @@ jobs:
           cargo fmt --all -- --check
           cargo clippy --all-targets --all-features -- -D warnings
 
-      - name: Test
+      # pgrx tests with runas argument ignores environment variables,
+      # so we need to create a .env file beforehand
+      - name: Create .env file
         run: |
-          cargo pgrx test pg16 --runas postgres --pgdata /tmp/pgdata
+          touch /tmp/.env
+          echo AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} >> /tmp/.env
+          echo AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} >> /tmp/.env
+          echo AWS_REGION=${{ secrets.AWS_REGION }} >> /tmp/.env
+          echo AWS_S3_TEST_BUCKET=${{ secrets.AWS_S3_TEST_BUCKET }} >> /tmp/.env
+
+      - name: Run tests
+        run: |
+          cargo llvm-cov test --lcov --output-path lcov.info
         env:
-          RUSTFLAGS: "-C instrument-coverage"
-          CARGO_INCREMENTAL: 0
           RUST_TEST_THREADS: 1
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          AWS_S3_TEST_BUCKET: ${{ secrets.AWS_S3_TEST_BUCKET }}
-
-      - name: Generate coverage report
-        continue-on-error: true
-        run: |
-          llvm-profdata merge default_*.profraw \
-            --output=pg_parquet.profdata
-
-          test_binary=$(find ./target/debug/deps/ -type f -executable -iname 'pg_parquet-*')
-
-          llvm-cov export \
-            --object=$test_binary \
-            --instr-profile=pg_parquet.profdata \
-            --format=lcov \
-            --ignore-filename-regex=.cargo/registry \
-            --ignore-filename-regex=.cargo/git \
-            --ignore-filename-regex=pg_parquet/target \
-            --ignore-filename-regex=rustc \
-            --check-binary-ids \
-          > pg_parquet.lcov
+          CARGO_PGRX_TEST_RUNAS: postgres
+          CARGO_PGRX_TEST_PGDATA: /tmp/pgdata
 
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v4
         with:
           fail_ci_if_error: true
-          files: ./pg_parquet.lcov
+          files: ./lcov.info
           flags: pgrxtests
           token: ${{ secrets.CODECOV_TOKEN }}
