--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ pg_test = []
 [dependencies]
 arrow = {version = "53", default-features = false}
 arrow-schema = {version = "53", default-features = false}
+aws-config = { version = "1.5", default-features = false, features = ["rustls"]}
+aws-credential-types = {version = "1.2", default-features = false}
 dotenvy = "0.15"
 futures = "0.3"
 object_store = {version = "0.11", default-features = false, features = ["aws"]}
