--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ arrow-schema = {version = "53", default-features = false}
 aws-config = { version = "1.5", default-features = false, features = ["rustls"]}
 aws-credential-types = {version = "1.2", default-features = false}
 futures = "0.3"
-object_store = {version = "0.11", default-features = false, features = ["aws"]}
+home = "0.5"
+object_store = {version = "0.11", default-features = false, features = ["aws", "azure"]}
 once_cell = "1"
 parquet = {version = "53", default-features = false, features = [
     "arrow",
@@ -38,6 +39,7 @@ parquet = {version = "53", default-features = false, features = [
     "object_store",
 ]}
 pgrx = "=0.12.9"
+rust-ini = "0.21"
 tokio = {version = "1", default-features = false, features = ["rt", "time", "macros"]}
 url = "2"
 
