--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        postgres: [ 14, 15, 16, 17 ]
+        postgres: [ 13, 14, 15, 16, 17 ]
     env:
       PG_MAJOR: ${{ matrix.postgres }}
 
@@ -91,7 +91,7 @@ jobs:
       - name: Install and configure pgrx
         run: |
           cargo install --locked cargo-pgrx@0.12.6
-          cargo pgrx init --pg${{ env.PG_MAJOR }} $(which pg_config)
+          cargo pgrx init --pg${{ env.PG_MAJOR }} /usr/lib/postgresql/${{ env.PG_MAJOR }}/bin/pg_config
 
       - name: Install cargo-llvm-cov for coverage report
         run: cargo install --locked cargo-llvm-cov@0.6.12
@@ -104,9 +104,9 @@ jobs:
       - name: Run tests
         run: |
           # Set up permissions so that the current user below can create extensions
-          sudo chmod a+rwx $(pg_config --pkglibdir)          \
-                           $(pg_config --sharedir)/extension \
-                           /var/run/postgresql/
+          sudo chmod a+rwx $(/usr/lib/postgresql/${{ env.PG_MAJOR }}/bin/pg_config --pkglibdir) \
+            $(/usr/lib/postgresql/${{ env.PG_MAJOR }}/bin/pg_config --sharedir)/extension \
+            /var/run/postgresql/
 
           # pgrx tests with runas argument ignores environment variables, so
           # we read env vars from .env file in tests (https://github.com/pgcentralfoundation/pgrx/pull/1674)
