--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,14 +107,18 @@ jobs:
 
       - name: Start Minio for s3 emulator tests
         run: |
-          docker run -d --env-file .devcontainer/.env -p 9000:9000 minio/minio server /data
+          docker run -d \
+            --env-file .devcontainer/.env \
+            -p 9000:9000 \
+            --entrypoint "./entrypoint.sh" \
+            --volume ./.devcontainer/minio-entrypoint.sh:/entrypoint.sh \
+            --name miniocontainer \
+            minio/minio
 
-          while ! nc -z localhost 9000; do
-              echo "Waiting for localhost:9000..."
-              sleep 1
+          while ! curl $AWS_ENDPOINT_URL; do
+            echo "Waiting for $AWS_ENDPOINT_URL..."
+            sleep 1
           done
-
-          aws --endpoint-url http://localhost:9000 s3 mb s3://$AWS_S3_TEST_BUCKET
 
       - name: Run tests
         run: |
