--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: sleep infinity
+    entrypoint: "./entrypoint.sh"
     network_mode: host
     volumes:
       - ..:/workspace
@@ -12,7 +12,7 @@ services:
       - ${USERPROFILE}${HOME}/.gitconfig:/home/rust/.gitconfig:ro
       - ${USERPROFILE}${HOME}/.aws:/home/rust/.aws:rw
       - ${USERPROFILE}${HOME}/.azure:/home/rust/.azure:rw
-
+      - ./entrypoint.sh:/entrypoint.sh
     env_file:
       - .env
     cap_add:
@@ -33,8 +33,8 @@ services:
       interval: 6s
       timeout: 2s
       retries: 3
-  volumes:
-      - ./minio-entrypoint.sh:/entrypoint.sh
+    volumes:
+        - ./minio-entrypoint.sh:/entrypoint.sh
 
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
@@ -43,9 +43,7 @@ services:
     network_mode: host
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "http://localhost:10000"]
+      test: ["CMD", "nc", "-z", "localhost", "10000"]
       interval: 6s
       timeout: 2s
       retries: 3
-    volumes:
-      - ./azurite-entrypoint.sh:/entrypoint.sh
