--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ pg_test = []
 arrow = {version = "53", default-features = false}
 arrow-cast = {version = "53", default-features = false}
 arrow-schema = {version = "53", default-features = false}
-aws-config = { version = "1", default-features = false, features = ["rustls"]}
+aws-config = { version = "1", default-features = false, features = ["rustls","rt-tokio"] }
 aws-credential-types = {version = "1", default-features = false}
-aws-sdk-sts = "1"
+azure_storage = {version = "0.21", default-features = false}
 futures = "0.3"
 home = "0.5"
 object_store = {version = "0.11", default-features = false, features = ["aws", "azure"]}
