--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ aws-credential-types = {version = "=1.2.1", default-features = false}
 azure_storage = {version = "0.21", default-features = false}
 futures = "0.3"
 home = "0.5"
-object_store = {version = "0.12", default-features = false, features = ["aws", "azure", "fs", "gcp", "http"]}
+object_store = {version = "=0.12.2", default-features = false, features = ["aws", "azure", "fs", "gcp", "http"]}
 once_cell = "1"
 parquet = {version = "55", default-features = false, features = [
     "arrow",
