--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -3,6 +3,7 @@ AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin
 AWS_REGION=us-east-1
 AWS_ENDPOINT_URL=http://localhost:9000
+AWS_ENDPOINT_PROXY_PORT=9999
 AWS_ALLOW_HTTP=true
 AWS_S3_TEST_BUCKET=testbucket
 MINIO_ROOT_USER=minioadmin
