--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ pg_test = []
 arrow = {version = "55", default-features = false}
 arrow-cast = {version = "55", default-features = false}
 arrow-schema = {version = "55", default-features = false, features = ["canonical_extension_types"]}
-aws-config = { version = "=1.5.18", default-features = false, features = ["rustls","rt-tokio"] }
-aws-credential-types = {version = "=1.2.1", default-features = false}
+aws-config = { version = "1", default-features = false, features = ["rustls","rt-tokio"] }
+aws-credential-types = {version = "1", default-features = false}
 azure_storage = {version = "0.21", default-features = false}
 futures = "0.3"
 home = "0.5"
