--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
         runs_on: [ 'ubuntu-22.04', 'ubuntu-22.04-arm' ]
         include:
           - runs_on: ubuntu-22.04
-            arch: x64
+            arch: x86_64
           - runs_on: ubuntu-22.04-arm
-            arch: arm64
+            arch: aarch64
 
     runs-on: ${{ matrix.runs_on }}
 
@@ -36,44 +36,28 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up sccache for x86_64
-        if: ${{ matrix.arch == 'x64' }}
+      - name: Set up sccache
         run: |
-          wget https://github.com/mozilla/sccache/releases/download/v$SCCACHE_VERSION/sccache-v$SCCACHE_VERSION-x86_64-unknown-linux-musl.tar.gz
-          tar -xzf sccache-v$SCCACHE_VERSION-x86_64-unknown-linux-musl.tar.gz
-          sudo mv sccache-v$SCCACHE_VERSION-x86_64-unknown-linux-musl/sccache /usr/local/bin
+          wget https://github.com/mozilla/sccache/releases/download/v$SCCACHE_VERSION/sccache-v$SCCACHE_VERSION-${{ matrix.arch }}-unknown-linux-musl.tar.gz
+          tar -xzf sccache-v$SCCACHE_VERSION-${{ matrix.arch }}-unknown-linux-musl.tar.gz
+          sudo mv sccache-v$SCCACHE_VERSION-${{ matrix.arch }}-unknown-linux-musl/sccache /usr/local/bin
           chmod +x /usr/local/bin/sccache
+          if [ "${{ matrix.arch }}" == "x86_64" ]; then
+            SCCACHE_SHA256=$SCCACHE_x86_64_SHA256
+          else
+            SCCACHE_SHA256=$SCCACHE_AARCH64_SHA256
+          fi
           echo "$SCCACHE_SHA256  /usr/local/bin/sccache" | sha256sum --check
         env:
           SCCACHE_VERSION: 0.8.1
-          SCCACHE_SHA256: "7203a4dcb3a67f3a0272366d50ede22e5faa3e2a798deaa4d1ea377b51c0ab0c"
+          SCCACHE_x86_64_SHA256: "7203a4dcb3a67f3a0272366d50ede22e5faa3e2a798deaa4d1ea377b51c0ab0c"
+          SCCACHE_AARCH64_SHA256: "36b2fd1c6c3a104ec1d526edb0533a3827c266054bf4552fb97f524beff6a612"
 
-      - name: Set up sccache for arm64
-        if: ${{ matrix.arch == 'arm64' }}
-        run: |
-          wget https://github.com/mozilla/sccache/releases/download/v$SCCACHE_VERSION/sccache-v$SCCACHE_VERSION-aarch64-unknown-linux-musl.tar.gz
-          tar -xzf sccache-v$SCCACHE_VERSION-aarch64-unknown-linux-musl.tar.gz
-          sudo mv sccache-v$SCCACHE_VERSION-aarch64-unknown-linux-musl/sccache /usr/local/bin
-          chmod +x /usr/local/bin/sccache
-          echo "$SCCACHE_SHA256  /usr/local/bin/sccache" | sha256sum --check
-        env:
-          SCCACHE_VERSION: 0.8.1
-          SCCACHE_SHA256: "36b2fd1c6c3a104ec1d526edb0533a3827c266054bf4552fb97f524beff6a612"
-
-      - name: Set up Rust for x86_64
-        if: ${{ matrix.arch == 'x64' }}
+      - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: 1.88.0
-          target: x86_64-unknown-linux-gnu
-          components: rustfmt, clippy, llvm-tools-preview
-
-      - name: Set up Rust for arm64
-        if: ${{ matrix.arch == 'arm64' }}
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: 1.88.0
-          target: aarch64-unknown-linux-gnu
+          toolchain: 1.89.0
+          target: ${{ matrix.arch }}-unknown-linux-gnu
           components: rustfmt, clippy, llvm-tools-preview
 
       - name: Cache cargo registry
@@ -150,17 +134,17 @@ jobs:
           make check-lint
 
       - name: Run tests without coverage
-        if: ${{ env.PG_MAJOR != '17' || matrix.arch != 'x64' }}
+        if: ${{ env.PG_MAJOR != '17' || matrix.arch != 'x86_64' }}
         run: |
           make check
 
       - name: Run tests with coverage
-        if: ${{ env.PG_MAJOR == '17' && matrix.arch == 'x64' }}
+        if: ${{ env.PG_MAJOR == '17' && matrix.arch == 'x86_64' }}
         run: |
           make check-with-coverage
 
       - name: Upload coverage report to Codecov
-        if: ${{ env.PG_MAJOR == '17' && matrix.arch == 'x64' }}
+        if: ${{ env.PG_MAJOR == '17' && matrix.arch == 'x86_64' }}
         uses: codecov/codecov-action@v4
         with:
           fail_ci_if_error: true
