--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pg_parquet"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2021"
 license-file = "LICENSE"
 
@@ -20,9 +20,9 @@ pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
 pg_test = []
 
 [dependencies]
-arrow = {version = "55", default-features = false}
-arrow-cast = {version = "55", default-features = false}
-arrow-schema = {version = "55", default-features = false, features = ["canonical_extension_types"]}
+arrow = {version = "56", default-features = false}
+arrow-cast = {version = "56", default-features = false}
+arrow-schema = {version = "56", default-features = false, features = ["canonical_extension_types"]}
 aws-config = { version = "1", default-features = false, features = ["rustls","rt-tokio"] }
 aws-credential-types = {version = "1", default-features = false}
 azure_storage = {version = "0.21", default-features = false}
@@ -30,17 +30,18 @@ futures = "0.3"
 home = "0.5"
 object_store = {version = "=0.12.2", default-features = false, features = ["aws", "azure", "fs", "gcp", "http"]}
 once_cell = "1"
-parquet = {version = "55", default-features = false, features = [
+parquet = {version = "56", default-features = false, features = [
     "arrow",
     "snap",
     "brotli",
-    "flate2",
+    "flate2-zlib-rs",
+    "simdutf8",
     "lz4",
     "zstd",
     "object_store",
     "arrow_canonical_extension_types",
 ]}
-pgrx = "=0.15.0"
+pgrx = "=0.16.0"
 rust-ini = "0.21"
 serde = "1"
 serde_json = "1"
@@ -48,7 +49,7 @@ tokio = {version = "1", default-features = false, features = ["rt", "time", "mac
 url = "2"
 
 [dev-dependencies]
-pgrx-tests = "=0.15.0"
+pgrx-tests = "=0.16.0"
 
 [profile.dev]
 panic = "unwind"
